X-axis overflow fixed for mobile ❤💕

--- a/_sass/about.sass
+++ b/_sass/about.sass
@@ -55,6 +55,7 @@
 
 
 .about-contain
+    overflow-x: hidden
     padding-bottom: 50px
     +prefix-transform(translate(-50%,0%))
     position: absolute
