--- a/_sass/musickey.sass
+++ b/_sass/musickey.sass
@@ -11,6 +11,7 @@
   transform         : $parameters
 
 .music-div
+    overflow-x: hidden
     padding-bottom: 50px
     text-align: center
     +prefix-animation(musicEnter 1s cubic-bezier(0.68, -0.55, 0.27, 1.55) 0s 1)
